--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      rel="stylesheet"
      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 />
-    <script src="src/js/script.js" defer></script>
+    <script src="./src/js/script.js" defer></script>
     <title>Clima agora</title>
 </head>
 <body>  
